# vd-chess-engine

engine/: CMakeLists.txt  structure.txt
engine/include/: attack_tables.hpp  bishop.hpp  board.hpp  king.hpp  knight.hpp  magic_bitboards.hpp  pawn.hpp  piece.hpp  queen.hpp  rook.hpp
engine/include/common/: color.hpp  piece_type.hpp  square.hpp  types.hpp
engine/src/: attack_tables.cpp  board.cpp  board_ref.cpp  magic_bitboards.cpp  main.cpp
engine/tests/: perft.cpp
web-ui/: package-lock.json  package.json
web-ui/src/: App.jsx  ChessGame.jsx
